# game-jam-02-24

./: .gitignore  CMakeLists.txt  README.md  build_game.sh  main.cpp
config/: source_dir.h.in
resources/models/: coin.mtl  player.mtl
resources/shaders/: coin.fs  floor.vs  perimeter.fs  perimeter.vs  player.fs
src/: CMakeLists.txt  Camera.h  Shader.h  main.cpp
src/api/: Camera.h  Mesh.h  Model.h
